[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/emerald.png" type="Texture" id=1]
[ext_resource path="res://src/Componets/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/Componets/OptionButton.gd" type="Script" id=3]

[node name="Button" type="Button"]
margin_right = 12.0
margin_bottom = 20.0
theme = ExtResource( 2 )
text = "1 Player Game"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 15.4757
margin_right = 96.4757
margin_bottom = 81.0
rect_scale = Vector2( 0.630365, 0.630365 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
